# docs/swagger.yaml
@@ -1,4 +1,27 @@
 definitions:
+  model.ComplainRepair:
+    properties:
+      address:
+        description: 投诉报修者地址
+        type: string
+      cr_type:
+        description: 投诉 报修
+        type: string
+      id:
+        type: integer
+      message:
+        description: 投诉报修详细信息
+        type: string
+      phone:
+        description: 投诉报修者电话
+        type: string
+      status:
+        description: 未处理 处理中 已处理
+        type: string
+      username:
+        description: 投诉报修者账户
+        type: string
+    type: object
   model.EditHouse:
     properties:
       address:
@@ -18,7 +41,7 @@ definitions:
       price:
         description: 房屋价格
         type: string
-      publisher:
+      username:
         description: 发布者
         type: string
     type: object
@@ -61,7 +84,7 @@ definitions:
       price:
         description: 房屋价格
         type: string
-      publisher:
+      username:
         description: 发布者
         type: string
     type: object
@@ -80,29 +103,6 @@ definitions:
         type: string
       title:
         description: 公告发布标题
-        type: string
-    type: object
-  model.TSBX:
-    properties:
-      address:
-        description: 投诉报修者地址
-        type: string
-      cr_type:
-        description: 投诉 报修
-        type: string
-      id:
-        type: integer
-      message:
-        description: 投诉报修详细信息
-        type: string
-      phone:
-        description: 投诉报修者电话
-        type: string
-      status:
-        description: 未处理 处理中 已处理
-        type: string
-      username:
-        description: 投诉报修者账户
         type: string
     type: object
   model.User:
@@ -159,6 +159,21 @@ info:
   title: 社区便民服务接口
   version: "1.0"
 paths:
+  /admin/complainrepair:
+    get:
+      description: 后台管理员获取全部的投诉报修
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/util.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/util.Response'
+      summary: gtAllComplainRepair
+      tags:
+      - 管理员模块
   /admin/editcr:
     get:
       description: 修改投诉报修的状态
@@ -257,9 +272,16 @@ paths:
       summary: getAllNotice
       tags:
       - 管理员模块
-  /admin/tsbx:
-    get:
-      description: 后台管理员获取全部的投诉报修
+  /complainrepair/add:
+    post:
+      description: 添加投诉报修
+      parameters:
+      - description: 投诉报修结构体
+        in: body
+        name: tb
+        required: true
+        schema:
+          $ref: '#/definitions/model.ComplainRepair'
       responses:
         "200":
           description: OK
@@ -269,9 +291,30 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/util.Response'
-      summary: gtAllComplainRepair
+      summary: addComplainRepair
       tags:
-      - 管理员模块
+      - 投诉报修模块
+  /complainrepair/get:
+    get:
+      description: 获取本人的投诉报修
+      parameters:
+      - description: 用户账号
+        in: query
+        name: username
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/util.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/util.Response'
+      summary: getComplainRepairByUsername
+      tags:
+      - 投诉报修模块
   /housekeeping/add:
     post:
       description: 添加一个家政服务请求
@@ -577,49 +620,6 @@ paths:
       summary: payProperty
       tags:
       - 物业费模块
-  /tsbx/add:
-    post:
-      description: 添加投诉报修
-      parameters:
-      - description: TSBX结构体
-        in: body
-        name: tb
-        required: true
-        schema:
-          $ref: '#/definitions/model.TSBX'
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/util.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: addComplainRepair
-      tags:
-      - 投诉报修模块
-  /tsbx/get:
-    get:
-      description: 获取本人的投诉报修
-      parameters:
-      - description: 用户账号
-        in: query
-        name: username
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/util.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: getComplainRepairByUsername
-      tags:
-      - 投诉报修模块
   /user/get:
     get:
       description: 获取用户信息根据username
