# model/complainrepair.go
@@ -3,7 +3,7 @@ package model
 import "graduationproject/util"
 
 //投诉报修结构体
-type TSBX struct {
+type ComplainRepair struct {
 	ID       int    `json:"id" gorm:"primarykey"`
 	CRType   string `json:"cr_type"`  //投诉 报修
 	Status   string `json:"status"`   //未处理 处理中 已处理
@@ -13,12 +13,12 @@ type TSBX struct {
 	Username string `json:"username"` //投诉报修者账户
 }
 
-func (TSBX) TableName() string {
-	return "t_tsbx"
+func (ComplainRepair) TableName() string {
+	return "t_complain_repair"
 }
 
 func EditComplainRepairStatus(id int) (err error) {
-	err = util.Db.Table("t_tsbx").Where("id=?", id).Update("status", "已处理").Error
+	err = util.Db.Table("t_complain_repair").Where("id=?", id).Update("status", "已处理").Error
 	if err != nil {
 		return
 	}
@@ -26,9 +26,9 @@ func EditComplainRepairStatus(id int) (err error) {
 }
 
 //添加投诉报修
-func AddTB(tb TSBX) (err error) {
+func AddTB(tb ComplainRepair) (err error) {
 	tb.Status = "未处理"
-	err = util.Db.Create(&tb).Error
+	err = util.Db.Table("t_complain_repair").Create(&tb).Error
 	if err != nil {
 		return
 	}
@@ -36,8 +36,8 @@ func AddTB(tb TSBX) (err error) {
 }
 
 //获取user 添加的投诉保修
-func GetTBByUsername(username string) (data []TSBX, err error) {
-	err = util.Db.Where("username=?", username).Find(&data).Error
+func GetTBByUsername(username string) (data []ComplainRepair, err error) {
+	err = util.Db.Table("t_complain_repair").Where("username=?", username).Find(&data).Error
 	if err != nil {
 		return
 	}
@@ -45,8 +45,8 @@ func GetTBByUsername(username string) (data []TSBX, err error) {
 }
 
 //管理员获取全部的投诉报修
-func GetAllCR() (data []TSBX, err error) {
-	err = util.Db.Table("t_tsbx").Find(&data).Error
+func GetAllCR() (data []ComplainRepair, err error) {
+	err = util.Db.Table("t_complain_repair").Find(&data).Error
 	if err != nil {
 		return
 	}
