# model/houserenting.go
@@ -7,23 +7,23 @@ import (
 
 //房屋租售结构体
 type HouseRentSale struct {
-	ID        int    `json:"id" gorm:"primarykey"`
-	Publisher string `json:"publisher"` //发布者
-	HRType    string `json:"hr_type"`   //房屋类型 租还是售
-	Message   string `json:"message"`   //房屋信息
-	Address   string `json:"address"`   //房屋地址
-	Phone     string `json:"phone"`     //联系方式
-	Price     string `json:"price"`     //房屋价格
+	ID       int    `json:"id" gorm:"primarykey"`
+	Username string `json:"username"` //发布者
+	HRType   string `json:"hr_type"`  //房屋类型 租还是售
+	Message  string `json:"message"`  //房屋信息
+	Address  string `json:"address"`  //房屋地址
+	Phone    string `json:"phone"`    //联系方式
+	Price    string `json:"price"`    //房屋价格
 }
 
 type EditHouse struct {
-	ID        string `json:"id"`
-	Publisher string `json:"publisher"` //发布者
-	HRType    string `json:"hr_type"`   //房屋类型 租还是售
-	Message   string `json:"message"`   //房屋信息
-	Address   string `json:"address"`   //房屋地址
-	Phone     string `json:"phone"`     //联系方式
-	Price     string `json:"price"`     //房屋价格
+	ID       string `json:"id"`
+	Username string `json:"username"` //发布者
+	HRType   string `json:"hr_type"`  //房屋类型 租还是售
+	Message  string `json:"message"`  //房屋信息
+	Address  string `json:"address"`  //房屋地址
+	Phone    string `json:"phone"`    //联系方式
+	Price    string `json:"price"`    //房屋价格
 }
 
 func (HouseRentSale) TableName() string {
@@ -79,13 +79,13 @@ func PublishHouse(rent HouseRentSale) (err error) {
 func EditHouseInfo(rent EditHouse) (err error) {
 	atoi, _ := strconv.Atoi(rent.ID)
 	var hr = HouseRentSale{
-		ID:        atoi,
-		Publisher: rent.Publisher,
-		HRType:    rent.HRType,
-		Message:   rent.Message,
-		Address:   rent.Address,
-		Phone:     rent.Phone,
-		Price:     rent.Price,
+		ID:       atoi,
+		Username: rent.Username,
+		HRType:   rent.HRType,
+		Message:  rent.Message,
+		Address:  rent.Address,
+		Phone:    rent.Phone,
+		Price:    rent.Price,
 	}
 	err = util.Db.Table("t_house_renting").Updates(&hr).Error
 	if err != nil {
